--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 	--black-focus: hsl(0, 0%, 18%);
 	--black-soft: hsla(0, 0%, 27%, 0.75);
 	--blue: hsl(217, 89%, 61%);
+	--blue-active: hsl(217, 89%, 40%);
 	--gray: rgb(112, 112, 112);
 }
 
@@ -264,5 +265,120 @@ body {
 			-ms-flex-preferred-size: 105px;
 			flex-basis: 105px;
 		}
+	}
+}
+
+/*------------------------------------*
+  #Download Button
+*------------------------------------*/
+
+.download {
+	background-color: var(--blue);
+	border-radius: 100%;
+	bottom: 10px;
+	color: white;
+	content: "z";
+	cursor: pointer;
+	height: 50px;
+	position: fixed;
+	right: 10px;
+	width: 50px;
+	transition: all 0.3s ease-out;
+	-webkit-transition: all 0.3s ease-out;
+	-moz-transition: all 0.3s ease-out;
+	-ms-transition: all 0.3s ease-out;
+	-o-transition: all 0.3s ease-out;
+}
+.download:active {
+	background-color: var(--blue-active);
+}
+
+.download::before {
+	background: center center no-repeat
+		url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white' width='24px' height='24px'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z'/%3E%3C/svg%3E");
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
+.download__wrapper {
+	position: absolute;
+	top: -96px;
+	left: -135px;
+	width: fit-content;
+	height: fit-content;
+
+	max-height: 0;
+	overflow: hidden;
+	opacity: 0;
+
+	list-style: none;
+	padding: 0;
+	background: white;
+
+	box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%),
+		0 1px 10px 0 rgb(0 0 0 / 12%);
+
+	transform: scaleY(0);
+	-webkit-transform: scaleY(0);
+	-moz-transform: scaleY(0);
+	-ms-transform: scaleY(0);
+	-o-transform: scaleY(0);
+
+	transition: all 0.2s ease;
+	-webkit-transition: all 0.2s ease;
+	-moz-transition: all 0.2s ease;
+	-ms-transition: all 0.2s ease;
+	-o-transition: all 0.2s ease;
+
+	border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-ms-border-radius: 4px;
+	-o-border-radius: 4px;
+}
+.open .download__wrapper {
+	max-height: initial;
+	opacity: 1;
+
+	transform: scaleY(1);
+	-webkit-transform: scaleY(1);
+	-moz-transform: scaleY(1);
+	-ms-transform: scaleY(1);
+	-o-transform: scaleY(1);
+}
+
+.download__wrapper li:hover {
+	background-color: rgba(0, 0, 0, 0.04);
+}
+.download__wrapper li:hover a {
+	color: var(--black);
+}
+
+.download__wrapper a {
+	white-space: nowrap;
+	display: block;
+	padding: 8px 16px;
+}
+
+.print::before {
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 18' fill='%23454545' width='20px' height='20px'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z'/%3E%3C/svg%3E");
+}
+
+.pdf::before {
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 18' fill='%23454545' width='20px' height='20px'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z'/%3E%3C/svg%3E");
+}
+
+.print::before,
+.pdf::before {
+	margin-right: 12px;
+}
+
+@media print {
+	.download__wrapper {
+		display: none;
 	}
 }
