--- a/src/style.css
+++ b/src/style.css
@@ -1,95 +1,81 @@
-
-/*------------------------------------*
+/* ------------------------------------*
   #Page
-*------------------------------------*/
+*------------------------------------ */
 
 .A4 {
-	padding: 48px 55px;
-	-webkit-box-shadow: 0;
-	box-shadow: 0;
-	background-color: white;
-
-	box-shadow: 0 0 7px 0px rgb(187 187 187 / 50%);
-
-	border-radius: 7px;
-	-webkit-border-radius: 7px;
-	-moz-border-radius: 7px;
-	-ms-border-radius: 7px;
-	-o-border-radius: 7px;
+  padding: 48px 55px;
+  border-radius: 7px;
+  background-color: white;
+  box-shadow: 0;
+  box-shadow: 0 0 7px 0 rgb(187 187 187 / 50%);
 }
 
 @media print {
-	.A4 {
-		width: 210mm;
-		height: 297mm;
-		padding: 48px;
-	}
+  .A4 {
+    height: 297mm;
+    width: 210mm;
+    padding: 48px;
+  }
 }
 
 @media not print {
-	@media (max-width: 48em) {
-		.A4 {
-			padding: 15px;
-		}
-	}
+  @media (max-width: 48em) {
+    .A4 {
+      padding: 15px;
+    }
+  }
 }
 
-/*------------------------------------*
+/* ------------------------------------*
   #Flex Container
-*------------------------------------*/
+*------------------------------------ */
 
 .d-flex {
-	display: table; /* IE < 10, Opera *Presto* Desktop */
-	display: -webkit-box; /* Safari 3.1 - 6, Chrome < 21 (2009 Spec), UCBrowser Android */
-	display: -moz-box; /* Firefox 2 - 27 (2009 Spec), UCMini Android */
-	display: -ms-flexbox; /* IE10 (2012 Syntax) */
-	display: -webkit-flex; /* Safari 6.1 - 8, Android < 4.4, BB < 10, Chrome 21 - 28 */
-	display: flex;
+  display: table; /* IE < 10, Opera *Presto* Desktop */
+  display: box; /* Safari 3.1 - 6, Chrome < 21 (2009 Spec), UCBrowser Android */ /* Firefox 2 - 27 (2009 Spec), UCMini Android */
+  display: flexbox; /* IE10 (2012 Syntax) */
+  display: flex; /* Safari 6.1 - 8, Android < 4.4, BB < 10, Chrome 21 - 28 */
 }
 
 @media not print {
-	@media (max-width: 48em) {
-		.d-flex {
-			display: block;
-		}
-	}
+  @media (max-width: 48em) {
+    .d-flex {
+      display: block;
+    }
+  }
 }
 
 .flex--1x3 {
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
+  justify-content: space-between;
 }
 
 .flex--1x3 > * {
-	-webkit-box-flex: 0.33;
-	-ms-flex: 0.33;
-	flex: 0.33;
+  flex: .33;
 }
 
 @media not print {
-	@media (max-width: 48em) {
-		.flex--1x3 > .info + .info {
-			margin-top: 2rem;
-		}
-	}
+  @media (max-width: 48em) {
+    .flex--1x3 > .info + .info {
+      margin-top: 2rem;
+    }
+  }
 }
 
-/*------------------------------------*
+/* ------------------------------------*
   #Container
-*------------------------------------*/
+*------------------------------------ */
 
 /**
  * Container
  */
 
 @media not print {
-	@media (min-width: 62em) {
-		.container {
-			width: 960px;
-			margin: 20px auto;
-		}
-	}
+  @media (min-width: 62em) {
+    .container {
+      width: 960px;
+      margin: 20px auto;
+    }
+  }
 }
 
 /**
@@ -97,214 +83,187 @@
  */
 
 .header__container {
-	-webkit-box-flex: 0.34;
-	-ms-flex: 0.34;
-	flex: 0.34;
+  flex: .34;
 }
 
 .content__container {
-	-webkit-box-flex: 0.66;
-	-ms-flex: 0.66;
-	flex: 0.66;
-	font-style: normal;
+  flex: .66;
+  font-style: normal;
 }
 
 @media not print {
-	@media (max-width: 48em) {
-		.header__container {
-			margin-bottom: 2rem;
-		}
-	}
+  @media (max-width: 48em) {
+    .header__container {
+      margin-bottom: 2rem;
+    }
+  }
 }
 
 .content__container:not(.flex--1x3) > .info + .info {
-	margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .content__container > a {
-	padding-bottom: 8px;
+  padding-bottom: 8px;
 }
 
 .wrapper + .wrapper {
-	margin-top: 40px;
+  margin-top: 40px;
 }
 
-/*------------------------------------*
+/* ------------------------------------*
   #Header Section
-*------------------------------------*/
+*------------------------------------ */
 
 .heading {
-	font-weight: 600;
-	font-size: 2.2rem;
-	color: var(--black);
-	margin-bottom: 0.3rem;
+  margin-bottom: .3rem;
+  font-size: 2.2rem;
+  font-weight: 600;
+  color: var(--black);
 }
 
 .exp-level {
-	font-size: 1.6rem;
-	color: var(--blue);
-	letter-spacing: 0.08rem;
-	font-weight: normal;
+  font-size: 1.6rem;
+  font-weight: normal;
+  letter-spacing: .08rem;
+  color: var(--blue);
 }
 
-/*------------------------------------*
+/* ------------------------------------*
   #Info
-*------------------------------------*/
+*------------------------------------ */
 
 .info header {
-	margin-bottom: 0.85rem;
+  margin-bottom: .85rem;
 }
 
 .info header h3 {
-	font-weight: bold;
-	font-size: 1.8rem;
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 
 .info header h3 span {
-	font-weight: normal;
-	color: var(--gray);
+  font-weight: normal;
+  color: var(--gray);
 }
 
 .info header p {
-	font-size: 1.6rem;
-	color: var(--black-soft);
+  font-size: 1.6rem;
+  color: var(--black-soft);
 }
 
-/*------------------------------------*
+/* ------------------------------------*
   # Skill section
-*------------------------------------*/
+*------------------------------------ */
 
 .skill__section ul {
-	list-style: none;
-	padding: 0;
-	margin: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 @media not print {
-	@media (min-width: 30em) and (max-width: 48em) {
-		.skill__section > .info {
-			display: -webkit-box;
-			display: -ms-flexbox;
-			display: flex;
-		}
-		.skill__section > .info header {
-			-ms-flex-preferred-size: 105px;
-			flex-basis: 105px;
-		}
-	}
+  @media (min-width: 30em) and (max-width: 48em) {
+    .skill__section > .info {
+      display: flex;
+    }
+
+    .skill__section > .info header {
+      flex-basis: 105px;
+    }
+  }
 }
 
-/*------------------------------------*
+/* ------------------------------------*
   #Download Button
-*------------------------------------*/
+*------------------------------------ */
 
 .download {
-	background-color: var(--blue);
-	border-radius: 100%;
-	bottom: 10px;
-	color: white;
-	content: "z";
-	cursor: pointer;
-	height: 50px;
-	position: fixed;
-	right: 10px;
-	width: 50px;
-	transition: all 0.3s ease-out;
-	-webkit-transition: all 0.3s ease-out;
-	-moz-transition: all 0.3s ease-out;
-	-ms-transition: all 0.3s ease-out;
-	-o-transition: all 0.3s ease-out;
+  content: 'z';
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
+  color: white;
+  background-color: var(--blue);
+  cursor: pointer;
+  transition: all .3s ease-out;
 }
+
 .download:active {
-	background-color: var(--blue-active);
+  background-color: var(--blue-active);
 }
 
 .download::before {
-	background: center center no-repeat
-		url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white' width='24px' height='24px'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z'/%3E%3C/svg%3E");
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background:
+    center center no-repeat
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white' width='24px' height='24px'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z'/%3E%3C/svg%3E");
 }
 
 .download__wrapper {
-	position: absolute;
-	top: -96px;
-	left: -135px;
-	width: fit-content;
-	height: fit-content;
-
-	max-height: 0;
-	overflow: hidden;
-	opacity: 0;
-
-	list-style: none;
-	padding: 0;
-	background: white;
-
-	box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%),
-		0 1px 10px 0 rgb(0 0 0 / 12%);
-
-	transform: scaleY(0);
-	-webkit-transform: scaleY(0);
-	-moz-transform: scaleY(0);
-	-ms-transform: scaleY(0);
-	-o-transform: scaleY(0);
-
-	transition: all 0.2s ease;
-	-webkit-transition: all 0.2s ease;
-	-moz-transition: all 0.2s ease;
-	-ms-transition: all 0.2s ease;
-	-o-transition: all 0.2s ease;
-
-	border-radius: 4px;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	-ms-border-radius: 4px;
-	-o-border-radius: 4px;
+  list-style: none;
+  position: absolute;
+  overflow: hidden;
+  top: -96px;
+  left: -135px;
+  height: fit-content;
+  max-height: 0;
+  width: fit-content;
+  padding: 0;
+  border-radius: 4px;
+  opacity: 0;
+  background: white;
+  box-shadow:
+    0 2px 4px -1px rgb(0 0 0 / 20%),
+    0 4px 5px 0 rgb(0 0 0 / 14%),
+    0 1px 10px 0 rgb(0 0 0 / 12%);
+  transform: scaleY(0);
+  transition: all .2s ease;
 }
-.open .download__wrapper {
-	max-height: initial;
-	opacity: 1;
 
-	transform: scaleY(1);
-	-webkit-transform: scaleY(1);
-	-moz-transform: scaleY(1);
-	-ms-transform: scaleY(1);
-	-o-transform: scaleY(1);
+.open .download__wrapper {
+  max-height: initial;
+  opacity: 1;
+  transform: scaleY(1);
 }
 
 .download__wrapper li:hover {
-	background-color: rgba(0, 0, 0, 0.04);
+  background-color: rgb(0 0 0 / 4%);
 }
+
 .download__wrapper li:hover a {
-	color: var(--black);
+  color: var(--black);
 }
 
 .download__wrapper a {
-	white-space: nowrap;
-	display: block;
-	padding: 8px 16px;
+  display: block;
+  padding: 8px 16px;
+  white-space: nowrap;
 }
 
 .print::before {
-	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 18' fill='%23454545' width='20px' height='20px'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z'/%3E%3C/svg%3E");
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 18' fill='%23454545' width='20px' height='20px'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z'/%3E%3C/svg%3E");
 }
 
 .pdf::before {
-	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 18' fill='%23454545' width='20px' height='20px'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z'/%3E%3C/svg%3E");
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 18' fill='%23454545' width='20px' height='20px'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z'/%3E%3C/svg%3E");
 }
 
 .print::before,
 .pdf::before {
-	margin-right: 12px;
+  margin-right: 12px;
 }
 
 @media print {
-	.download__wrapper {
-		display: none;
-	}
+  .download__wrapper {
+    display: none;
+  }
 }
