--- a/src/style.css
+++ b/src/style.css
@@ -31,10 +31,7 @@
 *------------------------------------ */
 
 .d-flex {
-  display: table; /* IE < 10, Opera *Presto* Desktop */
-  display: box; /* Safari 3.1 - 6, Chrome < 21 (2009 Spec), UCBrowser Android */ /* Firefox 2 - 27 (2009 Spec), UCMini Android */
-  display: flexbox; /* IE10 (2012 Syntax) */
-  display: flex; /* Safari 6.1 - 8, Android < 4.4, BB < 10, Chrome 21 - 28 */
+  display: flex;
 }
 
 @media not print {
