--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,6 @@
   padding: 48px 55px;
   border-radius: 7px;
   background-color: white;
-  box-shadow: 0;
   box-shadow: 0 0 7px 0 rgb(187 187 187 / 50%);
 }
 
@@ -240,10 +239,12 @@
   color: var(--black);
 }
 
-.download__wrapper a {
+.download__wrapper a,
+.download__wrapper p {
   display: block;
   padding: 8px 16px;
   white-space: nowrap;
+  color: var(--black);
 }
 
 .print::before {
