--- a/src/base.scss
+++ b/src/base.scss
@@ -11,6 +11,18 @@
   margin: 0;
   padding: 0;
   size: a4;
+
+  :footer,
+  :header {
+    display: none;
+  }
+}
+
+@media print {
+  body {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 html {
