--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,12 @@
 *------------------------------------ */
 
 .A4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 297mm;
+  width: 210mm;
+  margin: auto;
   padding: 48px 55px;
   border-radius: 7px;
   background-color: white;
@@ -18,8 +24,10 @@
 }
 
 @media not print {
-  @media (max-width: 48em) {
+  @media (max-width: 816px) {
     .A4 {
+      height: unset;
+      width: unset;
       padding: 15px;
     }
   }
@@ -34,7 +42,7 @@
 }
 
 @media not print {
-  @media (max-width: 48em) {
+  @media (max-width: 816px) {
     .d-flex {
       display: block;
     }
@@ -50,7 +58,7 @@
 }
 
 @media not print {
-  @media (max-width: 48em) {
+  @media (max-width: 816px) {
     .flex--1x3 > .info + .info {
       margin-top: 2rem;
     }
@@ -68,7 +76,6 @@
 @media not print {
   @media (min-width: 62em) {
     .container {
-      width: 960px;
       margin: 20px auto;
     }
   }
@@ -101,10 +108,6 @@
 
 .content__container > a {
   padding-bottom: 8px;
-}
-
-.wrapper + .wrapper {
-  margin-top: 40px;
 }
 
 /* ------------------------------------*
@@ -157,6 +160,10 @@
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.skill__section ul li + li {
+  margin-top: 8px;
 }
 
 @media not print {
@@ -224,6 +231,10 @@
     0 1px 10px 0 rgb(0 0 0 / 12%);
   transform: scaleY(0);
   transition: all .2s ease;
+
+  li + li {
+    margin-top: 0;
+  }
 }
 
 .open .download__wrapper {
@@ -238,6 +249,10 @@
 
 .download__wrapper li:hover a {
   color: var(--black);
+}
+
+.download__wrapper a {
+  text-decoration: none;
 }
 
 .download__wrapper a,
